--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,9 +11,10 @@ jobs:
       - python/load-cache
       - python/install-deps
       - python/save-cache
+      - pip install pytest
       - run:
-          command: ./manage.py test
-          name: Test
+          command: pytest
+          name: Run tests
 
 workflows:
   main:
