--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,22 +1,20 @@
-version: 2.1
-
-orbs:
-  python: circleci/python@0.2.1
-
 jobs:
-  build-and-test:
+  build:
     executor: python/default
     steps:
       - checkout
       - python/load-cache
       - python/install-deps
       - python/save-cache
-      - pip install pytest
       - run:
-          command: pytest
-          name: Run tests
-
+          command: |
+            # pytest would be a dep in requirements.txt
+            pytest
+          name: Test
+orbs:
+  python: circleci/python@0.1
+version: 2.1
 workflows:
   main:
     jobs:
-      - build-and-test
+      - build
